@@ -6,7 +6,7 @@ DIST smartgit-20.1.4.tar.gz 48029624 BLAKE2B fdfe0d9aa98446d863480b5852c011793fa
 DIST smartgit-20.2_rc1.tar.gz 104041114 BLAKE2B 8bcbe2daf51a3e4de6d042f1105db2ff283ec64af00f146045ccc8714940fffac5123557a1ff535b4793f864e76e378d4907e0198b15478d257887cf33788c2b SHA512 4b3cd94f38a287f6cd94ff5e4d2179ee9730465b2d972099b6ee6afa6b2d431ce7a460b6a4d6054a018a227478062bfa64970d87c9435134a44d566048fd0561
 EBUILD smartgit-20.1.2.ebuild 2719 BLAKE2B 06a161a974b138a317de2cc72a716fc9df9ede07e44b43cc79e99c4ba22a77f6e8096e2556651ab4b62f970414e2512a43d58d8105f52bb21f05a302565d02ab SHA512 7bd64da29a2b38c09245f59de8ccf2a9dee6e6e7ea3e5c39366dc92450f4de8e19c29f6052112cece24eca95f9681fd2c34c25530cb1029a7fb77d43f6793812
 EBUILD smartgit-20.1.4.ebuild 2719 BLAKE2B 06a161a974b138a317de2cc72a716fc9df9ede07e44b43cc79e99c4ba22a77f6e8096e2556651ab4b62f970414e2512a43d58d8105f52bb21f05a302565d02ab SHA512 7bd64da29a2b38c09245f59de8ccf2a9dee6e6e7ea3e5c39366dc92450f4de8e19c29f6052112cece24eca95f9681fd2c34c25530cb1029a7fb77d43f6793812
-EBUILD smartgit-20.2_rc1-r1.ebuild 2536 BLAKE2B 72e0a2c500ca18519b053c60bb1eff2568614ac38216230da6b7ba2bac9d52dd842a6e56cad6f78f228b4cde2d73614bc5153e8d76dde84da5eb8d8f85857b79 SHA512 52b47059df8333ea11548f51c8f3b6e38e4aacec8507d80a41e066e5bd8e7dec2831455d3e841367987ff789f0659bdef1c6b7bb7483fd6b378ea518c213f2ae
+EBUILD smartgit-20.2_rc1-r1.ebuild 2364 BLAKE2B ff1a07b4e4efc5f50f526c8aba08f32d12dcb2f8442715ba0cf8ab6cda7dfcb8e6a528af78bc36569dc64dd936418246f2669c4b300d6a21d5c9408e3019694f SHA512 0cb01fb93f83c1d2f69b43dabe87799348be1030fc0bae9934c1ffd12f00116fb7ec8eb8a0a25a7e37a75b5444ba68aa786328ed0fff7f960eb4ef4cba322146
 EBUILD smartgit-20.2_rc1.ebuild 2539 BLAKE2B 32f4726e409e97c7377bc0a5c757a9f2ee5154ffeefd2f2a43b1c758268035be1d0019ee192ce9a0fbd36b5e112c36428eed981904bd2f3b535b9ec891ff9afc SHA512 bc0451f38d8dc78173067d980b320d5e690b169d72ec2a5580771d5b85a637d47db2b3d1a4c4fd69e17a1348f192720fc2303a19795b86de0fa21805d863db84
-MISC ChangeLog 327 BLAKE2B 8bca87bb5dcde6889487cde72d5ae8b217422aef7d4ba087cb9981c5292c39d0bbdab327d70464c68933708cfa6653e9ea5de636c1be842e156c04da1ebc80c7 SHA512 4700713e240652264eaa38c3d8351b6c84a6e3ef05b9c34d8beb1b0ad7060456fa4d5ef2ed4a8096bd4a3412680dafdbb0f177088e53403e6ec20f6b7b9422e4
+MISC ChangeLog 355 BLAKE2B 3888c3cf80a8f925be47ff4e190d5e4d46b37b3841146bf5a4bc773d8f697c64d15b4c87562d9364b6d22442dbe07a49fe37c21aa99e2e0163468abce22a670b SHA512 bb98b44bc0af74e27536ca65af5e46a08ac564e73d7c2e81fa60c8974b203f2f4e87fd6282ea72efca885b10febd450214c57c60b1a8a66e0a5e58ca36aaf5d1
 MISC metadata.xml 389 BLAKE2B e75f29cb42f85f6f5b51c139d4cf3acb047e6672d33876176bd13f179b46bf31105dcb6bcfcae6144fdbc83d5f38d433da5609201024a28c93ca6a94dfd17018 SHA512 b346fd9fc62ac74f988a434840fb850bc9b6a592a239d5eb6fe3e0411d2defd335d637c5821f26d1a567f9de651e912a944e1c41d653431af86679104665fba5
