@@ -1,5 +1,8 @@
 *smartgit-20.2_rc1-r1
-::prototype99	don't use some outdated shell script from the files dir, add a higher memory fix for those working on the linux kernel
+::prototype99
+-don't use some outdated shell script from the files dir
+-add a higher memory fix for those working on the linux kernel
+-stop using rindeal eclass
 *smartgit-20.2_rc1
 ::prototype99	remove kinda useless comment, just hardcode the source url
 *smartgit-20.1.4
